--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write app"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
